@@ -2,6 +2,12 @@
 
 	* support/regression/MakeList,
 	  support/regression/cases/Makefile.in:
+	  Document reasons for some failing gte tests.
+
+2022-05-22 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
+
+	* support/regression/MakeList,
+	  support/regression/cases/Makefile.in:
 	  Document reasons for some failing TinyC tests.
 
 2022-05-22 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>
